--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
 
     <!-- style.css -->
     <link href="css/style.css" rel="stylesheet">
-
+    <link href="css/costum.css" rel="stylesheet">
     <!-- style-extern.css -->
     <link href="css/style-external.css" rel="stylesheet">
      <script src="lib/jquery-2.1.1.js"></script>
@@ -49,7 +49,7 @@
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
-
+    <script src="js/controllers.js"></script>
     <!-- jQuery UI -->
     <script src="lib/plugins/jquery-ui/jquery-ui.min.js"></script>
 
