--- a/app/index.html
+++ b/app/index.html
@@ -26,12 +26,21 @@
 
     <!-- gritter -->
     <link href="lib/plugins/gritter/jquery.gritter.css" rel="stylesheet">
+    <!-- cropper -->
+    <link href="css/plugins/cropper/cropper.min.css" rel="stylesheet">
 
+    <!-- switchery -->
+    <link href="css/plugins/switchery/switchery.css" rel="stylesheet">
+
+    <!--awesome-->
+    <link href="css/plugins/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" rel="stylesheet">
     <!-- animate -->
     <link href="css/animate.css" rel="stylesheet">
 
     <!-- style.css -->
     <link href="css/style.css" rel="stylesheet">
+    <!-- style-extern.css -->
+    <link href="css/style-external.css" rel="stylesheet">
     <link href="css/costum.css" rel="stylesheet">
     <!-- style-extern.css -->
     <link href="css/style-external.css" rel="stylesheet">
@@ -68,7 +77,13 @@
     <!-- select2 -->
     <script src="lib/plugins-external/jquery.select2/select2.min.js" type="text/javascript"></script>
 
-   
+   <script src="lib/plugins/cropper/cropper.min.js"></script>
+
+    <!-- switchery -->
+   <script src="lib/plugins/switchery/switchery.js"></script>
+
+    <!-- input mask-->
+    <script src="lib/plugins/jasny/jasny-bootstrap.min.js"></script>
 </head>
 <body> 
 
