finishing chat with slack

--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,8 @@
     <script src="lib/angular/angular-resource.js"></script>
     <script src="lib/angular/angular-cookies.js"></script>
     <script src="lib/angular/angular-cookies.js"></script>
+    
+    <script src="lib/angular/angular-sanitize.min.js"></script>
     <!-- custom and plugin javascript -->
     <script src="lib/inspinia.js"></script>
     <script src="js/app.js"></script>
