--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,8 @@
 
     <!-- switchery -->
     <link href="css/plugins/switchery/switchery.css" rel="stylesheet">
+     <!-- sweet alert -->
+    <link href="css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
 
     <!--awesome-->
     <link href="css/plugins/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" rel="stylesheet">
@@ -86,6 +88,8 @@
 
     <!-- input mask-->
     <script src="lib/plugins/jasny/jasny-bootstrap.min.js"></script>
+      <!-- sweet alert -->
+    <script src="lib/plugins/sweetalert/sweetalert.min.js"></script>
 </head>
 <body> 
 
