--- a/app/index.html
+++ b/app/index.html
@@ -66,9 +66,7 @@
    
 </head>
 <body> 
-
-    <div ng-view>
-    </div>
+    <div ng-view></div>
 </body>
 </html>
  <!-- jQuery UI -->
@@ -98,3 +96,4 @@
     <script src="lib/plugins/jasny/jasny-bootstrap.min.js"></script>
       <!-- sweet alert -->
     <script src="lib/plugins/sweetalert/sweetalert.min.js"></script>
+   
