--- a/app/index.html
+++ b/app/index.html
@@ -59,10 +59,12 @@
     <script src="lib/angular/angular-sanitize.min.js"></script>
     <!-- custom and plugin javascript -->
     <script src="lib/inspinia.js"></script>
+    <script src="js/settings.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/controllers.js"></script>
+
    
 </head>
 <body> 
