--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>flexwork.io | Dashboard</title>
-
+    <link rel="shortcut icon" href="img/favicon.png">
     <!-- boostrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     
@@ -98,4 +98,6 @@
     <script src="lib/plugins/jasny/jasny-bootstrap.min.js"></script>
       <!-- sweet alert -->
     <script src="lib/plugins/sweetalert/sweetalert.min.js"></script>
+
+    <script src="lib/node_modules/clipboard/dist/clipboard.min.js"></script>
    
