--- a/app/index.prod.html
+++ b/app/index.prod.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>flexwork.io | Dashboard</title>
-
+    <link rel="shortcut icon" href="img/favicon.png">
     <!-- boostrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     
@@ -63,6 +63,7 @@
     <script src="js/app.general.min.js"></script>
     <!-- jQuery UI -->
     <script src="lib/plugins/jquery-ui/jquery-ui.min.js"></script>
+    <script src="lib/node_modules/clipboard/dist/clipboard.min.js"></script>
 
     <!-- gitter -->
     <script src="lib/plugins/gritter/jquery.gritter.min.js"></script>
