add mini editor

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
     <!-- style-extern.css -->
     <link href="css/style-external.css" rel="stylesheet">
     <link href="css/costum.css" rel="stylesheet">
+    <link href="lib/node_modules/textangular/dist/textAngular.css" rel="stylesheet">
     <!-- style-extern.css -->
     <link href="css/style-external.css" rel="stylesheet">
      <script src="lib/jquery-2.1.1.js"></script>
@@ -55,8 +56,9 @@
     <script src="lib/angular/angular-resource.js"></script>
     <script src="lib/angular/angular-cookies.js"></script>
     <script src="lib/angular/angular-cookies.js"></script>
-    
-    <script src="lib/angular/angular-sanitize.min.js"></script>
+     <script src="lib/node_modules/textangular/dist/textAngular-rangy.min.js"></script>
+     <script src='lib/node_modules/textangular/dist/textAngular-sanitize.min.js'></script>
+    <script src="lib/node_modules/textangular/dist/textAngular.min.js"></script>
     <!-- custom and plugin javascript -->
     <script src="lib/inspinia.js"></script>
     <script src="js/settings.js"></script>
@@ -100,4 +102,5 @@
     <script src="lib/plugins/sweetalert/sweetalert.min.js"></script>
 
     <script src="lib/node_modules/clipboard/dist/clipboard.min.js"></script>
+   
    
