--- a/app/index.prod.html
+++ b/app/index.prod.html
@@ -41,6 +41,7 @@
 
     <!-- style.css -->
     <link href="css/style.min.css" rel="stylesheet">
+    <link href="lib/node_modules/textangular/dist/textAngular.css" rel="stylesheet">
 </head>
 <body> 
 
@@ -57,7 +58,9 @@
     <script src="lib/angular/angular-resource.min.js"></script>
     <script src="lib/angular/angular-cookies.min.js"></script>
     
-    <script src="lib/angular/angular-sanitize.min.js"></script>
+    <script src="lib/node_modules/textangular/dist/textAngular-rangy.min.js"></script>
+     <script src='lib/node_modules/textangular/dist/textAngular-sanitize.min.js'></script>
+    <script src="lib/node_modules/textangular/dist/textAngular.min.js"></script>
     <!-- custom and plugin javascript -->
     <script src="lib/inspinia.js"></script>
     <script src="js/app.general.min.js"></script>
