new design + invoice

--- a/app/index.html
+++ b/app/index.html
@@ -8,15 +8,15 @@
     <link rel="shortcut icon" href="img/favicon.png">
     <!-- boostrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    
+
     <!-- font awesome -->
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
 
     <!--datepicker-->
     <link href="css/plugins/datapicker/datepicker3.css" rel="stylesheet">
-    
+
     <!-- select2 -->
-    <link href="lib/plugins-external/jquery.select2/select2.css" rel="stylesheet" />    
+    <link href="lib/plugins-external/jquery.select2/select2.css" rel="stylesheet" />
 
     <!-- fooTable -->
     <link href="css/plugins/footable/footable.core.css" rel="stylesheet">
@@ -67,10 +67,10 @@
     <script src="js/directives.js"></script>
     <script src="js/controllers.js"></script>
     <script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/bf90791k';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
-   
+
 </head>
-<body> 
-    <div ng-view></div>
+<body>
+    <div ng-view style="height: 100%; min-height: 100%;"></div>
 </body>
 </html>
  <!-- jQuery UI -->
@@ -102,5 +102,3 @@
     <script src="lib/plugins/sweetalert/sweetalert.min.js"></script>
 
     <script src="lib/node_modules/clipboard/dist/clipboard.min.js"></script>
-   
-   
