integrate print option,fix modal hiding

--- a/app/index.html
+++ b/app/index.html
@@ -42,8 +42,9 @@
     <!-- style.css -->
     <link href="css/style.css" rel="stylesheet">
     <!-- style-extern.css -->
+    <link href="css/style-print.css" rel="stylesheet" media="print">
     <link href="css/style-external.css" rel="stylesheet">
-    <link href="css/costum.css" rel="stylesheet">
+    
     <link href="lib/node_modules/textangular/dist/textAngular.css" rel="stylesheet">
     <!-- style-extern.css -->
     <link href="css/style-external.css" rel="stylesheet">
