--- a/app/index.prod.html
+++ b/app/index.prod.html
@@ -38,7 +38,7 @@
     <link href="css/plugins/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.min.css" rel="stylesheet">
     <!-- animate -->
     <link href="css/animate.min.css" rel="stylesheet">
-
+    <link href="css/style-print.css" rel="stylesheet" media="print">
     <!-- style.css -->
     <link href="css/style.min.css" rel="stylesheet">
     <link href="lib/node_modules/textangular/dist/textAngular.css" rel="stylesheet">
