--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
     <link href="css/style-external.css" rel="stylesheet">
      <script src="lib/jquery-2.1.1.js"></script>
     <script src="lib/bootstrap.min.js"></script>
+   
     <script src="lib/plugins/metisMenu/jquery.metisMenu.js"></script>
     <script src="lib/plugins/slimscroll/jquery.slimscroll.min.js"></script>
     <script src="lib/angular/angular.js"></script>
@@ -103,3 +104,4 @@
     <script src="lib/plugins/sweetalert/sweetalert.min.js"></script>
 
     <script src="lib/node_modules/clipboard/dist/clipboard.min.js"></script>
+     <script type="text/javascript" src="lib/ui-sortable/src/sortable.js"></script>
