add missing libs

--- a/app/index.prod.html
+++ b/app/index.prod.html
@@ -94,3 +94,4 @@
     <script src="lib/plugins/jasny/jasny-bootstrap.min.js"></script>
       <!-- sweet alert -->
     <script src="lib/plugins/sweetalert/sweetalert.min.js"></script>
+    <script type="text/javascript" src="lib/ui-sortable/src/sortable.js"></script>
